--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -14,21 +14,8 @@ body {
   font-size: 1.1em;
   font-smooth: always;
   font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
   line-height: 1.666em;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h5 {
-  border-bottom: 1px solid #FFEFEF;
-  color: $color-primary-dark;
-  padding-bottom: 10px;
-}
-
-a {
-  color: $color-primary;
+  maxWidth: 100vw;
+  overflow-x: hidden;
+  text-rendering: optimizeLegibility;
 }
